Fixes $.repeatable collapsed style to hide form with tabs.

--- a/tool-ui/src/main/webapp/style/jquery.repeatable.less
+++ b/tool-ui/src/main/webapp/style/jquery.repeatable.less
@@ -215,10 +215,14 @@
 .repeatableForm > ul > li.collapsed > .frame {
     min-height: 0;
 }
+.repeatableForm > ol > li.collapsed .objectInputs,
+.repeatableForm > ul > li.collapsed .objectInputs,
 .repeatableForm > ol > li.collapsed .message,
 .repeatableForm > ul > li.collapsed .message,
 .repeatableForm > ol > li.collapsed .inputContainer,
 .repeatableForm > ul > li.collapsed .inputContainer,
+.repeatableForm > ol > li.toBeRemoved .objectInputs,
+.repeatableForm > ul > li.toBeRemoved .objectInputs,
 .repeatableForm > ol > li.toBeRemoved .message,
 .repeatableForm > ul > li.toBeRemoved .message,
 .repeatableForm > ol > li.toBeRemoved .inputContainer,
